--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,28 +1,29 @@
 # This workflow will build a .NET project
 # Basic .NET workflow - helps with Continuos Integration and Conitnuos Development
 
-name: .NET
+name: Build and Test
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'  # Adjust this based on your project version
+
+      - name: Restore dependencies
+        run: dotnet restore src/Magna.Dexsys.FileHandler/Magna.Dexsys.FileHandler.sln
+
+      - name: Build project
+        run: dotnet build src/Magna.Dexsys.FileHandler/Magna.Dexsys.FileHandler.sln --configuration Release --no-restore
+
+      - name: Run tests
+        run: dotnet test src/Magna.Dexsys.FileHandler/Magna.Dexsys.FileHandler.sln --no-build --verbosity normal
+
